<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/flSelection"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        layout="@layout/layout_copyright"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/llCopyright"
        android:layout_below="@+id/llProductInfo"
        android:layout_marginTop="24dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <LinearLayout
                android:id="@+id/llBrick"
                style="@style/ps_button">

                <ImageView
                    style="@style/ps_icon"
                    android:src="@drawable/creditdebit" />

                <TextView
                    android:id="@+id/tvBrick"
                    style="@style/style_ps_name"
                    android:text="@string/title_brick" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llLocalMethods"
                style="@style/ps_button"
                android:layout_marginTop="2dp">

                <ImageView
                    android:id="@+id/imageView4"
                    style="@style/ps_icon"
                    android:src="@drawable/local" />

                <TextView
                    android:id="@+id/tvLocalPs"
                    style="@style/style_ps_name"
                    android:text="@string/title_local_payment" />
                />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llMint"
                style="@style/ps_button"
                android:layout_marginTop="2dp">

                <ImageView
                    android:id="@+id/imageView2"
                    style="@style/ps_icon"
                    android:src="@drawable/mint" />

                <TextView
                    android:id="@+id/tvMint"
                    style="@style/style_ps_name"
                    android:text="@string/title_mint" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llMobiamo"
                style="@style/ps_button"
                android:layout_marginTop="2dp">

                <ImageView
                    style="@style/ps_icon"
                    android:src="@drawable/mobiamo" />

                <TextView
                    android:id="@+id/tvMobiamo"
                    style="@style/style_ps_name"
                    android:text="@string/title_mobiamo" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llPwLocal"
                style="@style/ps_button"
                android:visibility="gone"
                android:layout_marginTop="2dp">

                <ImageView
                    style="@style/ps_icon"
                    android:src="@drawable/others" />

                <TextView
                    android:id="@+id/tvPwLocal"
                    style="@style/style_ps_name"
                    android:text="@string/title_pwlocal" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <include layout="@layout/game_layout_product_info" />
</RelativeLayout>